--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,10 @@
-
-.Header
-{
+#header{
     background-color: #d4e1f5;
     border: 2px solid #5389d6;
     min-height: 50px;
 }
 
-.Header .header-brand
-{
+#header .header-brand{
     font-size: 18px;
     color: #151618;
     margin-left: 30px;
@@ -16,13 +13,12 @@
     text-decoration: none;
 }
 
-.Header .header-form
-{
+#header .header-form{
     display: inline-block;
     position: relative;
 }
 
-.Header .header-form button{
+#header .header-form button{
     position: absolute;
     background: transparent;
     border: 0;
@@ -32,15 +28,14 @@
     top: 4px;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='#999999' d='M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z'%3E%3C/path%3E%3C/svg%3E");
-
+    background-image: url("../img/search-icon.png");
 }
 
-.Header .header-form button:active{
+#header .header-form button:active{
     outline: none;
 }
 
-.Header .header-form input{
+#header .header-form input{
     min-width: 206px;
     border: 2px solid #999999;
     border-radius: 20px;
@@ -48,32 +43,28 @@
     padding: 0 5px 0 20px;
 }
 
-.Header .header-form input:focus{
+#header .header-form input:focus{
     outline: none;
 }
 
-.Header .navbar{
+#header .navbar{
     display: inline-block;
 }
 
-.Header .navbar-nav{
+#header .navbar-nav{
     list-style-type: none;
 }
 
-.Header .nav-item
-{
+#header .nav-item{
     display: inline-block;
     margin-right:12px; 
 }
-.Header .nav-item a 
-{
+#header .nav-item a{
     color: #0000ff;
     font-size: 16px;
-
 }
 
-.Header .right-wrapper
-{
+#header .right-wrapper{
     float: right;
     margin-right: 6px;
 }
