--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -28,7 +28,7 @@
     top: 4px;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url("./img/search-icon.png");
+    background-image: url("../../assets/img/search-icon.png");
 }
 
 #header .header-form button:active{
