--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,10 +1,10 @@
 .sidebar {
   width: 200px;
-  height: calc(100vh - 55px);
+  height: 100vh;
   margin-right: 20px;
   padding: 1px 0;
 
-  background: cadetblue;
+  background: $sidebar-background;
 }
 
 .menu {
