--- a/src/components/common/Table/style.scss
+++ b/src/components/common/Table/style.scss
@@ -1,8 +1,9 @@
 table {
   border-collapse: collapse;
-  td,
+  td ,
   th {
-    border: 1px solid #ccc;
     padding: 5px;
+
+    border: 1px solid $table-border-color;
   }
 }
