--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,21 +1,17 @@
-//   __   __        __   __   __  
-//  /  ` /  \ |    /  \ |__) /__` 
-//  \__, \__/ |___ \__/ |  \ .__/ 
 
-$primary-color: #ffffff;
+$primary-color: white;
 $primary-text: #414141;
 $sidebar-background: cadetblue;
 $header-background: #d4e1f5;
 $header-border-color: #5389d6;
-$primary-color: #ffffff;
+$primary-color: white;
 $search-border-color: #999999;
 $link-color: #0000ff;
+$header-logo-color: #151618;
 $table-border-color: #cccccc;
-
-
-
-//  ___  __       ___  __  
-// |__  /  \ |\ |  |  /__` 
-// |    \__/ | \|  |  .__/ 
 $font-stack: Helvetica, sans-serif;
 $font-size: 15px;
+$side-link-color: #dddddd;
+$side-link-color-hover: #eeeeee;
+$side-link-color-bg-dark: rgba(0, 0, 0, 0.1);
+$side-link-color-bg-white: rgba(255, 255, 255, 0.1);
