--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -16,14 +16,14 @@
 
     text-decoration: none;
 
-    color: #dddddd;
+    color: $side-link-color-hover;
     &.active {
-      color: white ;
-      background: rgba(0, 0, 0, 0.1);
+      color: white;
+      background: $side-link-color-bg-dark;
     }
     &:hover {
-      color: #eeeeee;
-      background: rgba(255, 255, 255, 0.1);
+      color: $side-link-color;
+      background: $side-link-color-bg-white;
     }
   }
 }
